# mmrgbx

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
configs/_base_/: default_runtime.py  schedule.py
configs/cmfg/: cmfg-c2seg.py  cmfg-dfc23.py  cmfg-optsar.py  cmfg-potsdam.py  cmfg-vaihingen.py
configs/cmx-segformer/: cmx-segformer-c2seg.py  cmx-segformer-dfc23.py  cmx-segformer-optsar.py  cmx-segformer-potsdam.py  cmx-segformer-vaihingen.py
configs/cmx-swin/: cmx-swin-c2seg.py  cmx-swin-dfc23.py  cmx-swin-optsar.py  cmx-swin-potsdam.py  cmx-swin-vaihingen.py
configs/datfuse/: datfuse-c2seg.py  datfuse-dfc23.py  datfuse-optsar.py  datfuse-potsdam.py  datfuse-vaihingen.py
configs/densefuse/: densefuse-c2seg.py  densefuse-dfc23.py  densefuse-optsar.py  densefuse-potsdam.py  densefuse-vaihingen.py
configs/dual-convnext/: dual-convnext-c2seg.py  dual-convnext-dfc23.py  dual-convnext-optsar.py  dual-convnext-potsdam.py  dual-convnext-vaihingen.py
configs/dual-emo/: dual-emo-c2seg.py  dual-emo-dfc23.py  dual-emo-optsar.py  dual-emo-potsdam.py  dual-emo-vaihingen.py
configs/dual-mobilenetv2/: dual-mobilenetv2-c2seg.py  dual-mobilenetv2-dfc23.py  dual-mobilenetv2-optsar.py  dual-mobilenetv2-potsdam.py  dual-mobilenetv2-vaihingen.py
configs/dual-smt/: dual-smt-c2seg.py  dual-smt-dfc23.py  dual-smt-optsar.py  dual-smt-potsdam.py  dual-smt-vaihingen.py
configs/dual-uniformer/: dual-uniformer-c2seg.py  (+4 more)
mmrgbx/: __init__.py  registry.py
tools/: slurm_test.sh  slurm_test_env.sh  slurm_train_1g1c.sh  slurm_train_4g16c.sh  test.py  train.py
(+127 files in other folders)
